--- a/src/editors/xrECore/xrECore.vcxproj
+++ b/src/editors/xrECore/xrECore.vcxproj
@@ -82,6 +82,7 @@
     <ClCompile Include="pch.cpp">
       <PrecompiledHeader>Create</PrecompiledHeader>
     </ClCompile>
+    <ClCompile Include="Props\FolderLib.cpp" />
     <ClCompile Include="Props\GameType.cpp" />
     <ClCompile Include="Props\ItemList.cpp" />
     <ClCompile Include="Props\NumericVector.cpp" />
@@ -93,6 +94,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="pch.hpp" />
+    <ClInclude Include="Props\FolderLib.h" />
     <ClInclude Include="Props\GameType.h">
       <FileType>CppForm</FileType>
     </ClInclude>
