xrSdkControls: add TreeView control

--- a/src/editors/xrECore/xrECore.vcxproj
+++ b/src/editors/xrECore/xrECore.vcxproj
@@ -66,17 +66,13 @@
     <Reference Include="Flobbster.Windows.Forms.PropertyGrid">
       <HintPath>Flobbster.Windows.Forms.PropertyGrid</HintPath>
     </Reference>
-    <Reference Include="PresentationCore" />
-    <Reference Include="PresentationFramework" />
     <Reference Include="System" />
     <Reference Include="System.Data" />
     <Reference Include="System.Drawing" />
     <Reference Include="System.Windows.Forms" />
-    <Reference Include="System.Xaml" />
     <Reference Include="System.Xml" />
     <Reference Include="UIAutomationProvider" />
     <Reference Include="WindowsBase" />
-    <Reference Include="WindowsFormsIntegration" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="pch.cpp">
@@ -130,6 +126,7 @@
   <ItemGroup>
     <EmbeddedResource Include="Props\ItemList.resx">
       <DependentUpon>Props\ItemList.h</DependentUpon>
+      <SubType>Designer</SubType>
     </EmbeddedResource>
     <EmbeddedResource Include="Props\PropertiesList.resx">
       <DependentUpon>Props\PropertiesList.h</DependentUpon>
